[package]
name = "inlay-control"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.28", features = ["full"] }
anyhow = "1.0.71"
ethers = { version = "2.0", features = ["ws", "rustls"] }
serde = { version = "1.0.163", features = ["derive"] }
log = "0.4.17"
env_logger = "0.10.0"
bincode = "1.3.3"
inlay-protocol = { path = "../inlay-protocol" }
