[package]
name = "inlay-data"
version = "0.1.0"
edition = "2021"

[dependencies]
boringtun = "0.5.2"
tokio = { version = "1.28", features = ["full"] }
anyhow = "1.0.71"
serde = { version = "1.0.163", features = ["derive"] }
log = "0.4.17"
env_logger = "0.10.0"
bincode = "1.3.3"
inlay-protocol = { path = "../inlay-protocol" }
